  * In the kfreebsd-source binary-indep package, clamp timestamps
    to be no later than the last debian/changelog entry.
    (Closes: #788238)
  * In the kfreebsd-source binary-indep package, ensure files
    and directories in the tarball are not writable by the src
    group, but readable by all, regardless of the umask setting
    when the package is built. (Closes: #791584)

 -- Steven Chamberlain <steven@pyro.eu.org>  Tue, 07 Jul 2015 21:00:25 +0100

kfreebsd-11 (11.0~svn265310-1) experimental; urgency=medium

  * New upstream snapshot.
    - Fix for SA-14:08 / CVE-2014-3000 (TCP reassembly vulnerability).
      (Closes: #746954)
    - 904_dev_full.diff: Remove (superceded by upstream).
    - Adapt to upstream removal of eisa module (r264654).
      - B-D on freebsd-mk with MK_EISA support.
      - debian/installer/modules/scsi-modules: Disable ahc_eisa.

  [ Christoph Egger ]
  * Increase firmware size limit to 1MiB. This should be enough for at
    least iwlwifi firmware to safely load

 -- Robert Millan <rmh@debian.org>  Sun, 04 May 2014 12:04:51 +0200

kfreebsd-11 (11.0~svn264364-1) experimental; urgency=low

  * New upstream snapshot.

 -- Robert Millan <rmh@debian.org>  Sat, 12 Apr 2014 20:12:10 +0200

kfreebsd-11 (11.0~svn263651-1) experimental; urgency=low

  * New upstream snapshot.

 -- Robert Millan <rmh@debian.org>  Sat, 22 Mar 2014 23:43:21 +0100

kfreebsd-11 (11.0~svn262281-2) experimental; urgency=low

  * Remove -DWITHOUT_SSP kludge. Apparently SSP doesn't break QEMU
    anymore.
  * B-D on freebsd-buildutils with reliable kldxref.

 -- Robert Millan <rmh@debian.org>  Fri, 21 Feb 2014 22:56:18 +0100

kfreebsd-11 (11.0~svn262281-1) experimental; urgency=low

  * New upstream snapshot.
    - Switch to clang-3.4.

  * Support debug flag in DEB_BUILD_OPTIONS.
  * Depend on freebsd-net-tools to avoid auto-removal (see comment in
    debian/control).

 -- Robert Millan <rmh@debian.org>  Fri, 21 Feb 2014 15:06:38 +0100
